RESOLVED FIXED157887
Fix the build with GCC 4.9 in CSSParser.cpp after r200626
https://bugs.webkit.org/show_bug.cgi?id=157887
Summary Fix the build with GCC 4.9 in CSSParser.cpp after r200626
Csaba Osztrogonác
Reported 2016-05-19 04:02:19 PDT
../../Source/WebCore/css/CSSParser.cpp: In member function 'WTF::Ref<WebCore::StyleRuleBase> WebCore::CSSParser::createViewportRule()': ../../Source/WebCore/css/CSSParser.cpp:13468:12: error: use of deleted function 'WTF::Ref<T>::Ref(const WTF::Ref<U>&) [with U = WebCore::StyleRuleViewport; T = WebCore::StyleRuleBase]' In file included from ../../Source/WTF/wtf/PassRefPtr.h:25:0, from ../../Source/WTF/wtf/RefPtr.h:30, from ../../Source/WTF/wtf/HashFunctions.h:26, from DerivedSources/WebCore/CSSPropertyNames.h:7, from ../../Source/WebCore/css/CSSPrimitiveValue.h:24, from ../../Source/WebCore/css/CSSCalculationValue.h:33, from ../../Source/WebCore/css/CSSParser.h:25, from ../../Source/WebCore/css/CSSParser.cpp:29: ../../Source/WTF/wtf/Ref.h:69:26: note: declared here
Attachments
Patch (1.27 KB, patch)
2016-05-19 04:04 PDT, Csaba Osztrogonác
cdumez: review-
Patch (1.46 KB, patch)
2016-05-19 10:09 PDT, Csaba Osztrogonác
no flags
Patch (1.87 KB, patch)
2016-05-19 10:13 PDT, Csaba Osztrogonác
no flags
Patch (2.08 KB, patch)
2016-05-19 10:36 PDT, Csaba Osztrogonác
no flags
Archive of layout-test-results from ews107 for mac-yosemite-wk2 (1.14 MB, application/zip)
2016-05-19 11:16 PDT, Build Bot
no flags
Csaba Osztrogonác
Comment 1 2016-05-19 04:04:18 PDT
Csaba Osztrogonác
Comment 2 2016-05-19 04:10:05 PDT
Just to document, the following change broke the build: http://trac.webkit.org/changeset/200626/trunk/Source/WebCore/css/CSSParser.cpp
Chris Dumez
Comment 3 2016-05-19 08:52:52 PDT
Comment on attachment 279377 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=279377&action=review > Source/WebCore/css/CSSParser.cpp:13460 > { I would prefer if we updated this method to return a Ref<StyleRuleViewport> instead.
Csaba Osztrogonác
Comment 4 2016-05-19 10:09:05 PDT
Created attachment 279396 [details] Patch speculative fix without time to build locally , let the EWS to try to build
Chris Dumez
Comment 5 2016-05-19 10:09:54 PDT
Comment on attachment 279396 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=279396&action=review > Source/WebCore/css/CSSParser.cpp:13463 > + Ref<StyleRuleViewport> rule = StyleRuleViewport::create(createStyleProperties()); Should use auto
Chris Dumez
Comment 6 2016-05-19 10:10:17 PDT
Comment on attachment 279396 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=279396&action=review > Source/WebCore/css/CSSParser.cpp:13459 > +Ref<StyleRuleViewport> CSSParser::createViewportRule() You also need to update the declaration in the header?
Csaba Osztrogonác
Comment 7 2016-05-19 10:13:37 PDT
Created attachment 279398 [details] Patch speculative fix without time to build locally , let the EWS to try to build
Chris Dumez
Comment 8 2016-05-19 10:22:37 PDT
Comment on attachment 279398 [details] Patch =me
Chris Dumez
Comment 9 2016-05-19 10:29:46 PDT
Unfortunately does not build yet: ../../Source/WebCore/css/CSSParser.h:465:9: error: 'StyleRuleViewport' was not declared in this scope Ref<StyleRuleViewport> createViewportRule();
Csaba Osztrogonác
Comment 10 2016-05-19 10:36:00 PDT
Created attachment 279401 [details] Patch Patch for landing with EFL buildfix. Tested GCC 4.9 too, it is happy now.
Chris Dumez
Comment 11 2016-05-19 10:40:26 PDT
Comment on attachment 279401 [details] Patch lgtm
Build Bot
Comment 12 2016-05-19 11:16:53 PDT
Comment on attachment 279401 [details] Patch Attachment 279401 [details] did not pass mac-wk2-ews (mac-wk2): Output: http://webkit-queues.webkit.org/results/1349104 New failing tests: inspector/debugger/scriptParsed.html
Build Bot
Comment 13 2016-05-19 11:16:58 PDT
Created attachment 279404 [details] Archive of layout-test-results from ews107 for mac-yosemite-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: ews107 Port: mac-yosemite-wk2 Platform: Mac OS X 10.10.5
WebKit Commit Bot
Comment 14 2016-05-19 11:49:32 PDT
Comment on attachment 279401 [details] Patch Clearing flags on attachment: 279401 Committed r201173: <http://trac.webkit.org/changeset/201173>
WebKit Commit Bot
Comment 15 2016-05-19 11:49:37 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.