Fix the build with GCC 4.9 in CSSParser.cpp https://bugs.webkit.org/show_bug.cgi?id=157887

Reviewed by Chris Dumez.

* css/CSSParser.cpp:
(WebCore::CSSParser::createViewportRule):
* css/CSSParser.h:


Canonical link: https://commits.webkit.org/176024@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@201173 268f45cc-cd09-0410-ab3c-d52691b4dbfc